# DocMgmt

./: CMakeLists.txt  DocMgmt.sln  Local Disk (C) - Shortcut.lnk  README.md  datastructures.h  encrypter.h  files.qml  imagines.qrc  logger.cpp  logger.h  main.cpp  main.qml  messages.h  pages.qrc
Client/: CMakeLists.txt  Test.qml  appengine.cpp  appengine.h  authenticationWindow.qml  calendar.cpp  calendar.h  client.cpp  client.h  database.cpp  database.h  encrypter.cpp  encrypter.h  filesmodel.cpp  filesmodel.h  header.h  images.qrc  imagines.qrc  main.cpp  main.qml  messenger.cpp  messenger.h  model.cpp  model.h  officemodel.cpp  officemodel.h  officepage.cpp  officepage.h  pages.qrc  personalmodel.cpp  personalmodel.h  qml.qrc  rightpage.cpp  rightpage.h  rightsmodel.cpp  rightsmodel.h  userpage.cpp  userpage.h
Client/Pages/: MenuStack.qml  Test.qml  calendar.qml  files.qml  personal.qml
Client/qml/: main.qml
Client/qml/Components/: CellBox.qml  ContextMenu.qml
Client/qml/Pages/: calendar.qml  files.qml  office.qml  offices.qml  officestable.qml  personal.qml  right.qml  rights.qml  rightstable.qml  user.qml
DocMgmt/: DocMgmt.pyproject  DocMgmt.vcxproj  DocMgmt.vcxproj.filters  docmgmt.cpp  docmgmt.h  docmgmt.qrc  docmgmt.ui  main.cpp  main.qml
DocMgmt/components/buttons/: TopBarButton.qml
GTest/: CMakeLists.txt  main.cpp
Pages/: calendar.qml  files.qml  personal.qml
Server/: CMakeLists.txt  database.cpp  database.h  filebase.cpp  filebase.h  main.cpp  messages.h  server.cpp  server.h
Tests/: CMakeLists.txt  test.cpp
oldOne/: CMakeLists.txt  encrypter.cpp  encrypter.h  logger.cpp
oldOne/Client/: CMakeLists.txt  appengine.h  calendar.h  client.cpp  client.h  filesmodel.cpp  filesmodel.h  header.h  images.qrc  messenger.cpp  officemodel.cpp  officemodel.h  officepage.cpp  personalmodel.cpp  personalmodel.h  qml.qrc  rightpage.h
oldOne/Client/qml/: authenticationWindow.qml
oldOne/Client/qml/Components/: ContextItem.qml  DrawerItem.qml  LargeChartView.qml  PageDrawer.qml
oldOne/Client/qml/Pages/: files.qml  officestable.qml  right.qml  rightstable.qml
oldOne/Server/: config.txt  filebase.cpp  filebase.h  server.cpp  server.h
oldOne/Tests/: CMakeLists.txt  test.cpp
